# lite-anvil-radnyx-ver

./: .gitignore  Cargo.toml  changelog.md  install.sh
.cargo/: config.toml
.github/workflows/: release.yml  test.yml
anvil-core/: Cargo.toml
anvil-core/src/: window.rs
anvil-core/src/editor/: app_state.rs  buffer.rs  commands_dispatch.rs  doc_view.rs  draw_context.rs  field_history.rs  git.rs  keymap.rs  lsp.rs  lsp_client.rs  main_loop.rs  mod.rs  open_doc.rs  picker.rs  process.rs  regex.rs  style_ctx.rs  syntax.rs  terminal.rs  terminal_buffer.rs  tokenizer.rs
anvil-core/src/renderer/: cache.rs  fallback.rs  font.rs  mod.rs
anvil-core/tests/: baseline_perf.rs
cmake/: static-crt.cmake
data-nano/assets/syntax/: gossamer.json
data/assets/syntax/: assembly.json  bazel.json  cmake.json  diff.json  ipynb.json  jinja.json  jsx.json  kotlin.json  makefile.json  matlab.json  ninja.json  pem.json  protobuf.json  racket.json  rst.json  scheme.json  scss.json  ssh_config.json
lite-anvil/: Cargo.toml
nano-anvil/src/: main.rs
scripts/: build-local-linux.sh  build-local-win.ps1
